# nfqr

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
experiments/test/: train_config.json
nfqr/: config.py  evaluation.py  globals.py  recorder.py  registry.py  sampler.py  stats.py
nfqr.egg-info/: PKG-INFO  SOURCES.txt
nfqr/data/: __init__.py  condition.py  config.py  datasampler.py  dataset.py  test_p_sampler.py
nfqr/eval/: config.py  evaluation.py
nfqr/mcmc/: __init__.py  base.py  cluster.py  config.py  hmc.py  initial_config.py  mlmc.py  nmcmc.py  stats.py  wolff_cluster.py
nfqr/nip/: __init__.py  nip.py  stats.py
nfqr/normalizing_flows/: flow.py  target_density.py
nfqr/script/: error_length_analysis_mcmc.py  eval.py  produce_regular_model_metrics.py  run_hmc.py  run_mcmc.py  run_mcmc_2.py  run_mcmc_3.py  test.py  time_mcmc.py  time_tasks.py  train.py  train_cluster.sh  tune.py
nfqr/stats/: stats.py
nfqr/target_systems/: __init__.py  action.h  action.py  config.py  observable.h  observable.py
nfqr/train/: config.py  metrics.py  model_lit.py  scheduler.py  utils.py
nfqr/tune/: tune.py
nfqr/utils/: __init__.py  argparse.py  env_setup.py  (+2 more)
normalizing_flows/: base_distribution.py
normalizing_flows_qr.egg-info/: PKG-INFO  SOURCES.txt
requirements/: base-osx.in  base-osx.txt  constraints.txt  requirements.in  requirements.txt
run_scripts/: submit_array.py  submit_array_eval.sh  submit_array_run_hmc.sh  submit_array_run_mcmc.sh  submit_array_train copy.sh  submit_array_train.sh  submit_script.sh  submit_tune.sh  train_cluster.sh
(+11480 files in other folders)
