[tool.poetry]
name = "nfqr"
version = "0.1.0"
description = ""
authors = ["Fabian Dechent"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
lmdb = "~1.3.0"
pytorch-lightning = "~1.6.5"
pydantic = "^1.10.2"
ninja = "^1.10.2.3"
pytest = "^7.1.3"
jax = "^0.3.17"
GitPython = "^3.1.27"
jaxlib = "^0.3.15"
numpyro = "^0.10.1"
ray = "^2.0.0"
pandas = "^1.5.0"
tabulate = "^0.8.10"
torch = "~1.11.0"
StrEnum = "^0.4.8"
einops = "^0.5.0"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
ipywidgets = "^8.0.2"
torch-tb-profiler = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

